
syntax = "proto3";

package wg_test;

option java_package = "wg_test.chat.proto";

message ServerMessage {

    enum MessageType {
        AUTH = 0;
        REGISTER = 1;
        CHECK_USER_NAME = 2;
        VALIDATE_TOKEN = 3;
        REGENERATE_TOKEN = 4;

        USER_LIST = 10;
        USER_STATUS_CHANGE = 11;
        NEW_USER = 12;

        SEND_MESSAGE = 20;
        UPDATE_MESSAGE = 21;
        DELETE_MESSAGE = 22;
        LIST_MESSAGES = 23;
        NEW_MESSAGE = 24;
        UPDATED_MESSAGE = 25;
    }

    MessageType type = 1;
    bool success = 2;
    bytes data = 3;
}
